--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
   "browserslist": [
     "last 3 versions"
   ],
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
     "browser-sync": "^2.27.10",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssimport": "^7.0.0",
     "gulp-csso": "^4.0.1",
@@ -32,6 +40,9 @@
     "gulp-shorthand": "^1.1.0",
     "gulp-size": "^4.0.1",
     "gulp-sourcemaps": "^3.0.0",
-    "sass": "^1.53.0"
+    "gulp-uglify": "^3.0.2",
+    "sass": "^1.53.0",
+    "webpack": "^5.73.0",
+    "webpack-stream": "^7.0.0"
   }
 }
